# ICAIF_interpretable-vol-surface-hedger

./: .gitignore  AGENTS.md  CITATION.cff  CLAIMS_AND_EVIDENCE.md  CLAUDE.md  DATA.md  Makefile  README.md  TODO.md  environment.yml  pyproject.toml
checkpoints/: proto_surface_hedger_best.npz
configs/: experiment.yaml
docs/: data_checklist.md  data_sources.md  wrds_data_request.md
paper/: .gitignore  PAPER_PLAN.md  README.md  main.tex  references.bib
reports/: ICAIF_report.md  ablation_report.md  arbitrage_audit.md  final_report.md  manifest.json  project_scope.md  prototype_audit_report.md
reports_real/: ablation_report.md  arbitrage_audit.md  consolidated_results.md  final_report.md  four_universe_grid_notes.md  manifest.json  ppo_tuning_notes.md  prototype_audit_report.md  slv_experiment_notes.md  why_initial_failed.md
scripts/: ablation_surface_contribution.py  build_dataset.py  cache_banks.py  compile_experiment_results.py  confirm_winner.py  diagnose_failure.py  evaluate.py  extract_data.py  grid_search.py  make_graphical_abstract.py  make_hero_figures.py  make_report.py  make_trade_anatomy.py  merge_surface_contribution.py  prototype_regime_audit.py  restyle_figures.py  run_delta_gamma_comparison.py  run_experiment.py  run_ppo_cvar_shaped.py  run_protohedge_baseline.py  run_real_analysis.py  run_real_data.py  run_regime_cap_compare.py  run_synthetic_demo.py  train.py  tune_ppo_robust.py  walkforward_stress_audit.py
tests/: test_arbitrage.py  test_clean.py  test_deep_rl.py  test_env.py  test_grid_mechanisms.py  test_loader.py  test_metrics.py  (+6 more)
(+87 files in other folders)
