[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpretable-vol-surface-hedger"
version = "0.1.0"
description = "Prototype-based volatility-surface hedging research stack"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0", "mypy>=1.8", "ipykernel", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
